--- a/web/index.html
+++ b/web/index.html
@@ -4,8 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
+  <meta name="theme-color" content="#166534" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>web</title>
+  <meta name="description"
+    content="FlowReader - Votre édition quotidienne pour une lecture plaisir et sans distractions." />
+  <title>FlowReader | La Une</title>
 </head>
 
 <body>
